# EvolVE

./: .env.example  .gitignore  LICENSE  README.md  config_example.yaml  main.py  pyproject.toml  run.sh
benchmarks/: rtllmv2.json  verilogevalv2.json  verilogevalv2_mod.json  verilogevalv2_mod_stg.json
src/: core.py  evaluator.py  igr.py  llm.py  search.py
tool/: analyze_report.py
