[project]
name = "evolution"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "certifi==2025.11.12",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "distro==1.9.0",
    "exceptiongroup==1.3.1",
    "fonttools==4.61.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.12.0",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "numpy==2.2.6",
    "openai==2.9.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pip==22.0.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "requests>=2.32.5",
    "setuptools==59.6.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.2",
]
